--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -10,6 +10,7 @@ en:
       confirm: "Confirm"
       destroy: "Delete"
       new: "New"
+      edit: "Edit"
     titles:
       edit: "Edit"
       save: "Save"
